k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
      - name: notes-app
        image: vamshiintech/notes-app:16
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

        env:   # ✅ inside container
        - name: FILE_PATH
          valueFrom:
            configMapKeyRef:
              name: notes-config
              key: FILE_PATH
        - name: APP_PASSWORD
          valueFrom:
            secretKeyRef:
              name: notes-secret
              key: APP_PASSWORD

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

      volumes:
      - name: notes-storage
        persistentVolumeClaim:
          claimName: nginx-pvc
