k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  type: ClusterIP
  selector:
    app: notes
  ports:
  - port: 5000
    targetPort: 5000
