k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
spec:
  ingressClassName: nginx   # 👈 ADD THIS
  rules:
  - host: dev.notes.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-service
            port:
              number: 5000
